# gh-lang-mock

./: .gitignore  README.md  pyproject.toml  pytest.ini
ghlangmock/: __init__.py  cli.py  generator.py  ignore.py  languages.py  scanner.py  seed.py
ghlangmock/assets/: seed.txt
tests/: test_cli.py  test_ignore.py  test_languages.py  test_scanner.py  test_seed_and_generator.py
